<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.VacationDetails">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        android:onClick="enterPartDetail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/baseline_add_24"
        tools:layout_editor_absoluteX="340dp"
        tools:layout_editor_absoluteY="681dp" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="408dp"
        android:layout_height="212dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Title:" />

                <EditText
                    android:id="@+id/vacationname"
                    android:layout_width="242dp"
                    android:layout_height="wrap_content"
                    android:hint="Enter Title" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Hotel:" />

                <EditText
                    android:id="@+id/hotelname"
                    android:layout_width="227dp"
                    android:layout_height="wrap_content"
                    android:hint="Enter Hotel Name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Start Date:" />

                <EditText
                    android:id="@+id/startdate"
                    android:layout_width="228dp"
                    android:layout_height="wrap_content"
                    android:hint="Choose Start Date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="End Date:" />

                <EditText
                    android:id="@+id/enddate"
                    android:layout_width="227dp"
                    android:layout_height="wrap_content"
                    android:hint="Choose End Date" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/excursionrecyclerview"
        android:layout_width="409dp"
        android:layout_height="464dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="201dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollview"/>
</androidx.constraintlayout.widget.ConstraintLayout>
