<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Save Vacation"
        android:id="@+id/vacationsave"/>

    <item android:title="Delete Vacation"
        android:id="@+id/vacationdelete"/>

    <item android:title="Start Notification"
        android:id="@+id/startnotification"/>

    <item android:title="End Notification"
        android:id="@+id/endnotification"/>

    <item android:title="Share Vacation"
        android:id="@+id/share"/>


</menu>
